workspace = { members = [  "examples/binary_tree",
 "examples/builder", "examples/bytes_learn",
  "examples/error_handle",
  "examples/fibonacci", 
  "examples/find_mid_value", "examples/find_substr", 
  "examples/health_statics",
   "examples/iterator", "examples/lrucache", 
   "examples/mem_layout",
    "examples/protocol_parser", "examples/rev_link", "examples/reversekgroup", "examples/tree_walk"] }

[package]
name = "rust-exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
