workspace = { members = [ "examples/async_trait_test", "examples/bigint",  "examples/binary_tree",
 "examples/builder", "examples/bytes_learn", "examples/cmd",
  "examples/error_handle",
  "examples/fibonacci", "examples/find_kth_largest", 
  "examples/find_mid_value", "examples/find_substr", 
  "examples/health_statics", "examples/island_number", "examples/island_number_v2",
   "examples/iterator", "examples/kube-api", "examples/lrucache", "examples/max_profit", 
   "examples/mem_layout",
    "examples/protocol_parser", "examples/quick_sort", "examples/raw_pointer", "examples/rev_link", "examples/reversekgroup", "examples/serdejsontest", "examples/sum_three", "examples/tokio_channel", 
    "examples/tracing_example", "examples/tokio_stream",  "examples/tree_walk", "examples/zigzag_level_order", "examples/send_sync", "examples/box_match"] }

[package]
name = "rust-exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
